force-app/main/default/objects/Account/fields/Licence_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Licence_Anniversary__c</fullName>
    <formula>IF( OR( Assignment_Effective_From_Date__c &gt; TODAY(), 
	TODAY() - Assignment_Effective_From_Date__c &lt;= 365 
	), 	
	IF( AND( MONTH( Assignment_Effective_From_Date__c ) = 2, 
		DAY( Assignment_Effective_From_Date__c ) = 29 ), 
	DATE( YEAR( Assignment_Effective_From_Date__c ) + 1, 2, 28), 
	IF( MONTH( Assignment_Effective_From_Date__c ) = 12, 
		DATE( YEAR( Assignment_Effective_From_Date__c )+1, 12, 31 ), 
	DATE( YEAR( Assignment_Effective_From_Date__c )+1, MONTH ( Assignment_Effective_From_Date__c ) + 1, 1 ) - 1 ) ),
IF( AND(YEAR( Assignment_Effective_From_Date__c ) &lt; YEAR(TODAY()),
		MONTH( Assignment_Effective_From_Date__c ) &lt;= MONTH(TODAY())),
               IF( MONTH( Assignment_Effective_From_Date__c ) = 2, 
			DATE( YEAR( TODAY() )+1, 3, 1)-1, 
                  IF( MONTH( Assignment_Effective_From_Date__c ) = 12, 
				DATE( YEAR( TODAY() )+1, 12, 31 ), 
			DATE( YEAR( TODAY() )+1, MONTH ( Assignment_Effective_From_Date__c ) + 1, 1 ) - 1 ) 
),
IF( MONTH( Assignment_Effective_From_Date__c ) = 2, 
				DATE( YEAR( TODAY() ), 3, 1)-1, 
				IF( MONTH( Assignment_Effective_From_Date__c ) = 12, 
					DATE( YEAR( TODAY() ), 12, 31 ), 
				DATE( YEAR( TODAY() ), MONTH ( Assignment_Effective_From_Date__c ) + 1, 1 ) - 1 ) 
				)

)
)</formula>
    <inlineHelpText>Next annual review is due on this date.</inlineHelpText>
    <label>Licence Anniversary</label>
    <type>Date</type>
</CustomField>