force-app/main/default/objects/Account/fields/Licence_Status__c.field-meta.xml
<CustomField>
    <fullName>Licence_Status__c</fullName>
    <description>Status of the License</description>
    <label>Licence Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Ceased</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Suspended Without Fees</fullName>
            </value>
            <value>
                <fullName>Suspended With Fees</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>