force-app/main/default/objects/Account/fields/Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type__c</fullName>
    <description>Partner Info - Type of Outlet</description>
    <inlineHelpText>What type of Outlet does this Facility or Licence relate to?</inlineHelpText>
    <label>Outlet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LPO</fullName>
            </value>
            <value>
                <fullName>CMA</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>RP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>