force-app/main/default/objects/Account/fields/LicenceManualActivationDate__c.field-meta.xml
<CustomField>
    <fullName>LicenceManualActivationDate__c</fullName>
    <description>The date/time that the Licence was manually activated.</description>
    <inlineHelpText>The date/time that the Licence was manually activated.</inlineHelpText>
    <label>Licence Manual Activation Date</label>
    <type>DateTime</type>
</CustomField>