force-app/main/default/objects/Account/fields/LicenceManualDeactivationDate__c.field-meta.xml
<CustomField>
    <fullName>LicenceManualDeactivationDate__c</fullName>
    <description>The date/time that the Licence was manually deactivated.</description>
    <inlineHelpText>The date/time that the Licence was manually deactivated.</inlineHelpText>
    <label>Licence Manual Deactivation Date</label>
    <type>DateTime</type>
</CustomField>