force-app/main/default/objects/Account/fields/MailingStreet2__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet2__c</fullName>
    <description>SSSW</description>
    <label>Mailing Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>