force-app/main/default/objects/Account/fields/mh_Critical_Vulnerability__c.field-meta.xml
<CustomField>
    <fullName>mh_Critical_Vulnerability__c</fullName>
    <description>SAM Integration</description>
    <label>Critical Vulnerability</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>