force-app/main/default/objects/Account/fields/Minimum_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Approval_Level__c</fullName>
    <description>Partner Info - Minimum number of approvals required for Licence and Negotiated Payments, Loans, Repayments</description>
    <label>Minimum Approval Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>