force-app/main/default/objects/Account/fields/Miscellaneous_Transactions_Listing__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Transactions_Listing__c</fullName>
    <description>List of known Miscelaneous Transactions to be included</description>
    <inlineHelpText>List of known Miscelaneous Transactions to be included</inlineHelpText>
    <label>Miscellaneous Transactions Listing</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>