force-app/main/default/objects/Account/fields/MTD_Target__c.field-meta.xml
<CustomField>
    <fullName>MTD_Target__c</fullName>
    <description>Phase 2 - To be used for Reporting Purposes.</description>
    <label>MTD Target</label>
    <summarizedField>Budget_and_Revenue__c.MTD_Original_Budget_R__c</summarizedField>
    <summaryForeignKey>Budget_and_Revenue__c.Organisation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>