force-app/main/default/objects/Account/fields/Network_Facility__c.field-meta.xml
<CustomField>
    <fullName>Network_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links an Account which represents an Australia Post facility (e.g. a Retail Outlet or Business Hub) to its appropriate Network/Facility record (WCIS master data)</description>
    <inlineHelpText>Link to WCIS data for this facility</inlineHelpText>
    <label>Network (Facility)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Network__c.Org_Unit_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Licence_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>