force-app/main/default/objects/Account/fields/Network_Manager__c.field-meta.xml
<CustomField>
    <fullName>Network_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who should approve this Licence assignment?</inlineHelpText>
    <label>Network Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>