force-app/main/default/objects/Account/fields/NewLastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>NewLastActivityDate__c</fullName>
    <description>used by Task and Event triggers to store the last closed task or forward planned event for an associated Account</description>
    <inlineHelpText>The date when a last valid contact/visit was made by the Account Manager</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>