force-app/main/default/objects/Account/fields/NextActivityDueinDays__c.field-meta.xml
<CustomField>
    <fullName>NextActivityDueinDays__c</fullName>
    <description>.</description>
    <formula>IF(ISBLANK(Call_Cycle_Frequency__c), FrequencyTest__c - DaysSinceLastActivity__c, Call_Cycle_Frequency__c - DaysSinceLastActivity__c)</formula>
    <inlineHelpText>Based on the coverage frequency or override frequency, the number of days the next activity is due in</inlineHelpText>
    <label>Next Activity Due in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>