force-app/main/default/objects/Account/fields/Nominated_Partner_Contact_Incent_User__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Partner_Contact_Incent_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact used to integrate with the Incent application, and as the primary point of contact for communications.</description>
    <inlineHelpText>Contact used to integrate with the Incent application, and as the primary point of contact for communications</inlineHelpText>
    <label>Nominated Partner Contact &amp; Incent User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Incent and Primary Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>