force-app/main/default/objects/Account/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>djk 20/10/11
new field required to replace accountnumber as we cant change the data type of a standard field</description>
    <label>Party Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>