force-app/main/default/objects/Account/fields/Offers_Business_Banking__c.field-meta.xml
<CustomField>
    <fullName>Offers_Business_Banking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this site offer Business Banking services?</description>
    <inlineHelpText>Does this site offer Business Banking services?</inlineHelpText>
    <label>Offers Business Banking</label>
    <type>Checkbox</type>
</CustomField>