force-app/main/default/objects/Account/fields/Online_Selling__c.field-meta.xml
<CustomField>
    <fullName>Online_Selling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Online Selling</label>
    <type>Checkbox</type>
</CustomField>