force-app/main/default/objects/Account/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>djk 20/10/11</description>
    <label>Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>