force-app/main/default/objects/Account/fields/Organisation_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Trading_Name__c</fullName>
    <description>ECLM Relabelled from &apos;Trading Name&apos;</description>
    <inlineHelpText>A registered business name is the name under which a company trades. The legal entity name is the name that appears on all official legal documents. If you are creating a contract you must use the legal entity name.</inlineHelpText>
    <label>Registered Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>