force-app/main/default/objects/Account/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>