force-app/main/default/objects/Account/fields/Outlet_Plant_Number__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Plant_Number__c</fullName>
    <description>The Outlet Plant Number from SAP for the network (facility)</description>
    <inlineHelpText>SAP Outlet Plant Number</inlineHelpText>
    <label>Outlet Plant Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>