force-app/main/default/objects/Account/fields/ParentABN__c.field-meta.xml
<CustomField>
    <fullName>ParentABN__c</fullName>
    <description>The Parent Organisation&apos;s ABN which is referenced in the outbound message for Licence Activation button on the Licence record type.</description>
    <formula>Parent.ABN__c</formula>
    <inlineHelpText>ABN of the Parent Organisation</inlineHelpText>
    <label>Parent ABN</label>
    <type>Text</type>
</CustomField>