force-app/main/default/objects/Account/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Phone?</label>
    <type>Checkbox</type>
</CustomField>