force-app/main/default/objects/Account/fields/Physical__c.field-meta.xml
<CustomField>
    <fullName>Physical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Physical</label>
    <type>Checkbox</type>
</CustomField>