force-app/main/default/objects/Account/fields/Post_Office_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Post_Office_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field indicates the Post Office (Corporate Outlet or Licenced Post Office) that is assigned to and managing this customer in conjunction with the Account Manager listed on this organisation.</inlineHelpText>
    <label>Post Office Assigned</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Accounts (Post Office Assigned)</relationshipLabel>
    <relationshipName>Assigned_Network</relationshipName>
    <type>Lookup</type>
</CustomField>