force-app/main/default/objects/Account/fields/Primary_Business_Solutions_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Solutions_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Business Solutions Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Organisations (Primary Business Solutions Contact)</relationshipLabel>
    <relationshipName>Organisations</relationshipName>
    <type>Lookup</type>
</CustomField>