force-app/main/default/objects/Account/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <description>This field was created for MW0001719 - it is to help identify whether the lead came in via over the counter, the Internet or both</description>
    <inlineHelpText>This field is used to distinguish between the verification of identity (VOI) for Property Transfers channel/product each conveyancer/lawyer/mortgagee (CLM) has registered with Australia Post to use.</inlineHelpText>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTC Registration Only</fullName>
            </value>
            <value>
                <fullName>Online Registration Only</fullName>
            </value>
            <value>
                <fullName>Online With OTC Issued</fullName>
            </value>
            <value>
                <fullName>Online With OTC Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>