force-app/main/default/objects/Account/fields/Related_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer_Number__c</fullName>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Related Customer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>