force-app/main/default/objects/Account/fields/Related_to_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is used to identify if there is a relationship between customers that can not be linked in the hierarchy.</inlineHelpText>
    <label>Related to Organisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organisation</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Related to Organisation)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>