force-app/main/default/objects/Account/fields/RequiresOrganisation__c.field-meta.xml
<CustomField>
    <fullName>RequiresOrganisation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SSSW</description>
    <label>Requires Organisation</label>
    <type>Checkbox</type>
</CustomField>