force-app/main/default/objects/Account/fields/Root_Id__c.field-meta.xml
<CustomField>
    <fullName>Root_Id__c</fullName>
    <description>The value of the topmost node Id if the Account is part of a hierarchy</description>
    <label>Root Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>