force-app/main/default/objects/Account/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will be filled based on the value of Sale Team.</inlineHelpText>
    <label>Sales Team Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Director_for_Account</relationshipName>
    <type>Lookup</type>
</CustomField>