force-app/main/default/objects/Account/fields/SalesTeamType__c.field-meta.xml
<CustomField>
    <fullName>SalesTeamType__c</fullName>
    <description>Dependent picklist field to segment Accounts based on Sales team picklist. This field is populated by automation on business accounts based on the controlling &quot;Sales Team&quot; (API Name - &quot;Sales_Segment__c&quot;) pick list value and not intended to be populated directly. The value of this field drives sharing behaviour that handles access segmentation for Sales Team.
- Criteria based sharing rules on Account (3 sharing rules)
- Apex managed sharing for sensitive child objects having a lookup relationship to Account</description>
    <inlineHelpText>Segment of the Account based on the assigned Sales Team.</inlineHelpText>
    <label>Sales Team Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holding</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>