force-app/main/default/objects/Account/fields/SAP_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Vendor_ID__c</fullName>
    <description>SAP Vendor ID for the Licensee</description>
    <externalId>true</externalId>
    <label>SAP Vendor ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>