force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>To clearly &amp; easily Identify Small Business Customers. 
Requested and owned by Christopher Doyle 
Customer &amp; Market Analyst 
Customer Data &amp; Insights</description>
    <inlineHelpText>To clearly &amp; easily Identify Small Business Customers.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>StarTrack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>