force-app/main/default/objects/Account/fields/Service_Partnership_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Partnership_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>