force-app/main/default/objects/Account/fields/Service_Partnership_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Partnership_Manager_Email__c</fullName>
    <description>This field is currently used for Service Now Integration - Bulk Queries, it is used to view the Service Partner&apos;s email address (User&apos;s email address).</description>
    <formula>Service_Partnership_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Partnership Manager Email</label>
    <type>Text</type>
</CustomField>