force-app/main/default/objects/Account/fields/ServiceSLA__c.field-meta.xml
<CustomField>
    <fullName>ServiceSLA__c</fullName>
    <description>The Service SLA will alter the level of Service this customer will receive from the Service Team.</description>
    <inlineHelpText>The Service SLA will alter the level of Service this customer will receive from the Service Team.</inlineHelpText>
    <label>Service SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>MyPost Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>