force-app/main/default/objects/Account/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <formula>IF( IsVIP__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=015O0000000NBLJ&quot;, &quot;VIP&quot;, 16, 16),
IF(IsPersonAccount, IMAGE(&quot;/servlet/servlet.FileDownload?file=015O0000000NBLF&quot;, &quot;Consumer&quot;, 16, 16),
IF( AND( NOT(ISBLANK(Role_Type_Roll_Up__c)), Role_Type_Roll_Up__c ==&apos;Customer&apos;),
IF( Text(ServiceSLA__c) == &apos;Enterprise&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015O0000000NBLH&quot;, &quot;Enterprise&quot;, 16, 16),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015O0000000NBLI&quot;, &quot;SMB&quot;, 16, 16)) ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015O0000000NBLG&quot;, &quot;ConsumerSMB&quot;, 16, 16)) ) )</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>