force-app/main/default/objects/Account/fields/Shipping_DPID__c.field-meta.xml
<CustomField>
    <fullName>Shipping_DPID__c</fullName>
    <inlineHelpText>The DPID associated with the Organisation or Individual&apos;s physical address.</inlineHelpText>
    <label>Physical DPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>