force-app/main/default/objects/Account/fields/Short_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Short_Delivery__c</fullName>
    <description>StarTrack Allow short delivery restriction</description>
    <label>Allow short delivery?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>