force-app/main/default/objects/Account/fields/StarTrack_Customer_Stream__c.field-meta.xml
<CustomField>
    <fullName>StarTrack_Customer_Stream__c</fullName>
    <description>StarTrack Customer Stream</description>
    <label>StarTrack Customer Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sapphire</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>