force-app/main/default/objects/Account/fields/Stock_Order_Turnaround_Days__c.field-meta.xml
<CustomField>
    <fullName>Stock_Order_Turnaround_Days__c</fullName>
    <description>Number of days stock turnaround time (excluding Normal Transit Time)</description>
    <inlineHelpText>Number of days stock turnaround time (excluding Normal Transit Time)</inlineHelpText>
    <label>Stock Order Turnaround Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>