force-app/main/default/objects/Account/fields/Subjected_To_GST__c.field-meta.xml
<CustomField>
    <fullName>Subjected_To_GST__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if the LPO is subject to GST or not (e.g. outside of Australia).</description>
    <label>GST Applicable</label>
    <type>Checkbox</type>
</CustomField>