force-app/main/default/objects/Account/fields/Supply_Chain_Management__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phase 1 - Marketing Characteristics</description>
    <label>Supply Chain Management (Supplier)</label>
    <type>Checkbox</type>
</CustomField>