force-app/main/default/objects/Account/fields/Suppress_Default_Role__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Default_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Default Role</label>
    <type>Checkbox</type>
</CustomField>