force-app/main/default/objects/Account/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <description>The reason codes for why a Licensee has terminated with POST</description>
    <inlineHelpText>Reason why Licence was Ceased.

For Non LPO Licences; select a value in this field, set Assignment Effective To Date, then submit the Licence for Approval.

For LPO Licences; Cease via a Partner Info Change record.</inlineHelpText>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Franchised business ceased to operate</fullName>
            </value>
            <value>
                <fullName>Franchise terminated by franchisor</fullName>
            </value>
            <value>
                <fullName>Franchise terminated by franchisee</fullName>
            </value>
            <value>
                <fullName>Franchise not renewed when expired</fullName>
            </value>
            <value>
                <fullName>Franchise business bought back by franchisor</fullName>
            </value>
            <value>
                <fullName>Franchise terminated and franchised business acquired by franchisor</fullName>
            </value>
            <value>
                <fullName>New Assignment</fullName>
            </value>
            <value>
                <fullName>Agent’s business ceased to operate</fullName>
            </value>
            <value>
                <fullName>Agreement terminated by Australia Post</fullName>
            </value>
            <value>
                <fullName>Agreement terminated by Agent</fullName>
            </value>
            <value>
                <fullName>Agreement not renewed when expired</fullName>
            </value>
            <value>
                <fullName>New Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>