force-app/main/default/objects/Account/fields/Transfer_Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Case_Queue__c</fullName>
    <description>StarTrack: Queue name to transfer case to if account is Business Solutions Customer</description>
    <label>Transfer Case Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>