force-app/main/default/objects/Account/fields/Transit_Risk__c.field-meta.xml
<CustomField>
    <fullName>Transit_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transit Risk</label>
    <type>Checkbox</type>
</CustomField>